--- a/index.html
+++ b/index.html
@@ -16,21 +16,6 @@
 
     <!-- Custom CSS -->
     <style>
-	
-	#myProgress {
-		position: relative;
-		width: 100%;
-		height: 30px;
-		background-color: LightGray;
-	}
-
-	#myBar {
-		position: absolute;
-		width: 1%;
-		height: 100%;
-		background-color: green;
-	}
-
     body {
         padding-top: 50px;
     }
@@ -82,19 +67,15 @@
 		
 		<br/>
 		
-		<!--div id="myProgress">
-			<div id="myBar"></div>
-		</div-->
-		
 		<div class="text-center">
 			<progress id="prog" value="0" max="200"></progress>
 		</div>
-
+		
 		<br/>
 		
-		<h4 id="output" style="visibility:hidden">Results:</div>
-		<ol id="chatlog"></ol>
-				
+		<h4 id="output" style="visibility:hidden;">Results:</h4>
+		<ul id="chatlog"></ul>
+
 		<hr/>
 
     </div>
